--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             <li>Time</li>
         </ul>
     </div>
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
