--- a/index.html
+++ b/index.html
@@ -1,37 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
-    <title>Login scam model</title>
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial_scale=1.0" />
+    <title>Instagram-clone by ARUN</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media-queries.css" />
+    <link rel="icon" href="photos/insta-icon.jpg" />
 </head>
 <body>
-    <div class="login-container">
-        <div class="logo">
-            <img src="img/logo.jpeg" alt="Logo">
+    <main>
+        <div class="log-in-container">
+            <div class="log-in">
+                <img src="photos/logo.png" class="logo"/>
+                <div class="log-in-form">
+                    <input type="text" placeholder="Phone number,username or email" />
+                    <input type="password" placeholder="Password" />
+                    <button class="log-in-button">Log In</button>
+                </div>
+
+                <span class="or-divider">OR</span>
+                <!--FACEBOOK OPTION-->
+                <div class="fb-login">
+                    <a href="#">
+                        <img src="photos/facebook-icon.png">
+                        <span>Log in with Facebook</span>
+                    </a>
+                </div>
+                <!--forgot passwd-->
+                <a href="#">Forgot password?</a>
+            </div>
+            <!--sign up-->
+            <div class="sign-up">
+                <span>Don't have an account
+                    <a href="#">Sign up</a>
+                </span>
+            </div>
+            <!--download-->
+            <div class="get-the-app">
+                <span>Get the app</span>
+                <div class="app-images">
+                    <a href="#"><img src="photos/applestore.png" /></a>
+                    <a href="#"><img src="photos/googlestore.png" /></a>
+                </div>
+            </div>
+
         </div>
-        <div class="login-form">
-            <input type="text" placeholder="Email" id="emailInput">
-            <input type="password" placeholder="Password" id="passwordInput">
-            <button id="submitBtn">Log In</button>
-            <div class="or-divider">OR</div>
-            <a href="#">Forgot Password?</a>
+        <!--phones-->
+        <div class="phones-container">
+            <img src="photos/phones.png" />
         </div>
-    </div>    
-    <div class="result-container" id="resultContainer">
-        <button id="popupCloseBtn"><i class='bx bx-x bx-rotate-90'></i></button>
-        <ul id="email-li">
-            <li>Emails</li>
+    </main>
+    <footer>
+        <ul class="footer-links">
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">HELP</a></li>
+            <li><a href="#">PRESS</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">JOBS</a></li>
+            <li><a href="#">PRIVACY</a></li>
+            <li><a href="#">TERMS</a></li>
+            <li><a href="#">LOCATION</a></li>
+            <li><a href="#">TOP</a></li>
+            <li><a href="#">ACCOUNTS</a></li>
+            <li><a href="#">HASHTAGS</a></li>
+            <li><a href="#">LANGUAGE</a></li>
         </ul>
-        <ul id="password-li">
-            <li>Passwords</li>
-        </ul>
-        <ul id="time-li">
-            <li>Time</li>
-        </ul>
-    </div>
-<script src="script.js"></script>
+        <span class="copyright">&copy; 2020 INSTAGRAM FROM FACEBOOK</span>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
