--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            <img src="/img/logo.jpeg" alt="Logo">
+            <img src="logo.jpeg" alt="Logo">
         </div>
         <div class="login-form">
             <input type="text" placeholder="Email" id="emailInput">
