--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="logo.jpeg" alt="Logo">
         </div>
         <div class="login-form">
-            <input type="text" placeholder="Email" id="emailInput">
+            <input type="text" placeholder="Phone number,email or username" id="emailInput">
             <input type="password" placeholder="Password" id="passwordInput">
             <button id="submitBtn">Log In</button>
             <div class="or-divider">OR</div>
