--- a/details.html
+++ b/details.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/details.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/details.css">
     <title>Instagram Details</title>
     <!-- Firebase Config Script -->
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js"></script>
     <!-- Load Users Script -->
-    <script type="module" src="/scripts/details.js" defer></script>
+    <script type="module" src="scripts/details.js" defer></script>
 </head>
 <body>
     
