--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="google-site-verification" content="ftRVSDwRPLDgR4HPl83tTGizlEZ1jHBd7e-hVxBeOnk" />
 	<title>Instagram login page</title>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="/styles/main.css">
-	<link rel="stylesheet" href="/styles/style.css">
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
 	<div class="header">
 		<div class="top">
 			<div class="logo">
-				<img src="/img/instagram.png" alt="Instagram" style="width: 175px;">
+				<img src="img/instagram.png" alt="Instagram" style="width: 175px;">
 			</div>
 			<div class="form">
 				<div class="input_field">
@@ -32,7 +32,7 @@
 			</div>
 			<div class="dif">
 				<div class="fb">
-					<img src="/img/facebook.png" alt="facebook">
+					<img src="img/facebook.png" alt="facebook">
 					<p>Log in with Facebook</p>
 				</div>
 				<div class="forgot">
@@ -46,8 +46,8 @@
 		<div class="apps">
 			<p>Get the app.</p>
 			<div class="icons">
-				<a href="#"><img src="/img/appstore.png" alt="App Store"></a>
-				<a href="#"><img src="/img/googleplay.png" alt="Google Play"></a>
+				<a href="#"><img src="img/appstore.png" alt="App Store"></a>
+				<a href="#"><img src="img/googleplay.png" alt="Google Play"></a>
 			</div>
 		</div>
 	</div>
@@ -74,7 +74,7 @@
 </div>
 
 <!-- Link to your JavaScript -->
-<script src="/scripts/script.js" type="module"></script>
+<script src="scripts/script.js" type="module"></script>
 
 </body>
 </html>
