--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 				<li><a href="#">LANGUAGE</a></li>
 			</ul>
 		</div>
-		<div class="copyright">
+<!-- 		<div class="copyright">
 			© 2019 INSTAGRAM
-		</div>
+		</div> -->
 	</div>
 </div>
 
