--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/style.css">
+	<link rel="icon" href="insta logo.jpeg">
 </head>
 <body>
 
